# tinker

./: .gitignore  NOTICE  __about__.py  pyproject.toml  quill.json
.github/workflows/: build.yml
scripts/: __init__.py  files.py  utils.py
scripts/run/: build.py  dev.py  generate.py  init.py
src/: wizard.py
