[project]
name = "tinker"
version = "0.1.0"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["**"]
sources = ["."]

[project.scripts]
init = "scripts:init"
generate = "scripts:generate"
dev = "scripts:dev"
build = "scripts:build"
